use stakeholders from investor table instead of secondary investors in group-by-investor-name view (now by-stakeholder)

--- a/global_app/templates/group-by.html
+++ b/global_app/templates/group-by.html
@@ -282,6 +282,8 @@ $(document).ready(function () {
         <th><a {% if data.order_by == 'intention' %}class="asc" href="?{% add_or_update_param request.GET 'order_by' '-intention' %}" {% elif data.order_by == '-intention' %}class="desc" href="?{% add_or_update_param request.GET 'order_by' 'intention' %}"{% else %} href="?{% add_or_update_param request.GET 'order_by' 'intention' %}"{% endif %}>Intention of investment</a></th>
         {% elif "primary_investor"  == column %}
         <th><a {% if data.order_by == 'primary_investor' %}class="asc" href="?{% add_or_update_param request.GET 'order_by' '-primary_investor' %}" {% elif data.order_by == '-primary_investor' %}class="desc" href="?{% add_or_update_param request.GET 'order_by' 'primary_investor' %}"{% else %} href="?{% add_or_update_param request.GET 'order_by' 'primary_investor' %}"{% endif %}>Primary investor</a></th>
+        {% elif "stakeholder_name"  == column %}
+        <th><a {% if data.order_by == 'stakeholder_name' %}class="asc" href="?{% add_or_update_param request.GET 'order_by' '-stakeholder_name' %}" {% elif data.order_by == '-stakeholder_name' %}class="desc" href="?{% add_or_update_param request.GET 'order_by' 'stakeholder_name' %}"{% else %} href="?{% add_or_update_param request.GET 'order_by' 'stakeholder_name' %}"{% endif %}>Stakeholders</a></th>
         {% elif "investor_name"  == column %}
         <th><a {% if data.order_by == 'investor_name' %}class="asc" href="?{% add_or_update_param request.GET 'order_by' '-investor_name' %}" {% elif data.order_by == '-investor_name' %}class="desc" href="?{% add_or_update_param request.GET 'order_by' 'investor_name' %}"{% else %} href="?{% add_or_update_param request.GET 'order_by' 'investor_name' %}"{% endif %}>Secondary&nbsp;investor</a></th>
         {% elif "investor_country" == column %}
@@ -359,6 +361,15 @@ $(document).ready(function () {
             {% if item.investor_name %}
                 {% for i in item.investor_name %}
                   <a href="/{{cms_page}}/by-investor-name/{{i.id}}/?{% add_or_update_param request.GET 'order_by' '' %}">{{ i.name }}</a><br/>
+                {% endfor %}
+            {% else %}{% trans "unknown" %}
+            {% endif %}
+            </td>
+          {% elif column == "stakeholder_name" %}
+            <td style="width:183px">
+            {% if item.stakeholder_name %}
+                {% for i in item.stakeholder_name %}
+                  <a href="/{{cms_page}}/by-stakeholder-name/{{i.id}}/?{% add_or_update_param request.GET 'order_by' '' %}">{{ i.name }}</a><br/>
                 {% endfor %}
             {% else %}{% trans "unknown" %}
             {% endif %}
