--- a/global_app/templates/all_deals.html
+++ b/global_app/templates/all_deals.html
@@ -287,6 +287,8 @@ $(document).ready(function () {
         <th><a {% if data.order_by == 'operational_stakeholder' %}class="asc" href="?{% add_or_update_param request.GET 'order_by' '-operational_stakeholder' %}" {% elif data.order_by == '-operational_stakeholder' %}class="desc" href="?{% add_or_update_param request.GET 'order_by' 'operational_stakeholder' %}"{% else %} href="?{% add_or_update_param request.GET 'order_by' 'operational_stakeholder' %}"{% endif %}>Operational stakeholder</a></th>
         {% elif "stakeholder_name"  == column %}
         <th><a {% if data.order_by == 'stakeholder_name' %}class="asc" href="?{% add_or_update_param request.GET 'order_by' '-stakeholder_name' %}" {% elif data.order_by == '-stakeholder_name' %}class="desc" href="?{% add_or_update_param request.GET 'order_by' 'stakeholder_name' %}"{% else %} href="?{% add_or_update_param request.GET 'order_by' 'stakeholder_name' %}"{% endif %}>Stakeholders</a></th>
+        {% elif "stakeholder_country" == column %}
+        <th class="investor-country"><a {% if data.order_by == 'stakeholder_country' %}class="asc" href="?{% add_or_update_param request.GET 'order_by' '-stakeholder_country' %}" {% elif data.order_by == '-stakeholder_country' %}class="desc" href="?{% add_or_update_param request.GET 'order_by' 'stakeholder_country' %}"{% else %} href="?{% add_or_update_param request.GET 'order_by' 'stakeholder_country' %}"{% endif %}>Stakeholder countries</a></th>
         {% elif "investor_country" == column %}
         <th class="investor-country"><a {% if data.order_by == 'investor_country' %}class="asc" href="?{% add_or_update_param request.GET 'order_by' '-investor_country' %}" {% elif data.order_by == '-investor_country' %}class="desc" href="?{% add_or_update_param request.GET 'order_by' 'investor_country' %}"{% else %} href="?{% add_or_update_param request.GET 'order_by' 'investor_country' %}"{% endif %}>Secondary&nbsp;investor country</a></th>
         {% elif "investor_region" == column %}
@@ -374,6 +376,14 @@ $(document).ready(function () {
                 {% endfor %}
             {% else %}{% trans "unknown" %}
             {% endif %}
+            </td>
+          {% elif "stakeholder_country" == column %}
+            <td class="investor-country">
+              {% if item.stakeholder_country %}
+              {% for stakeholder_country  in item.stakeholder_country %}
+                <a href="/{{ cms_page }}/by-investor-country/{{investor_country|slugify}}/?{% add_or_update_param request.GET 'order_by' '' %}">{{ stakeholder_country }}</a><br/>
+              {% endfor %}
+              {% else %}{% trans "unknown country" %}{% endif %}
             </td>
           {% elif "investor_country" == column %}
             <td class="investor-country">
