--- a/global_app/templates/global_base.html
+++ b/global_app/templates/global_base.html
@@ -11,7 +11,7 @@
 
 {% block nav %}
 <li><a class="get-the-idea toggle-tooltip bottom" title="{% trans "Get&nbsp;the&nbsp;idea" %}" href="/get-the-idea/">{% trans "Get the idea" %}</a></li>
-<li class="active"><a class="get-the-detail toggle-tooltip bottom" title="{% trans "Get&nbsp;the&nbsp;detail" %}" href="/get-the-detail/">{% trans "Get the detail" %}</a></li>
+<li class="active"><a class="get-the-detail toggle-tooltip bottom" title="{% trans "Get&nbsp;the&nbsp;detail" %}" href="/global/">{% trans "Get the detail" %}</a></li>
 <li><a class="get-involved toggle-tooltip bottom" title="{% trans "Get&nbsp;involved" %}" href="/get-involved/">{% trans "Get involved" %}</a></li>
 <li><a class="about toggle-tooltip bottom" title="{% trans "About" %}" href="/about/">{% trans "About" %}</a></li>
 {% endblock %}
@@ -27,28 +27,28 @@
     <ul class="nav nav-pills subnav span12">
 		<li class="by-target-country {% if group_slug == "by-target-country" or group_slug == "by-target-region" %} active{% endif %}">
             <div class="thumbnail">
-                <a href="/get-the-detail/by-target-country/">By target country</a><br/>
-                <a href="/get-the-detail/by-target-region/">By target region</a>
+                <a href="/global/by-target-country/none/">By target country</a><br/>
+                <a href="/global/by-target-region/none/">By target region</a>
             </div>
         </li>
-        <li class="by-investor-country {% if group_slug == "by-investor-country" or group_slug == "by-investor-region" or group_slug == "by-investor-name" %} active{% endif %}">
+        <li class="by-investor-country {% if group_slug == "by-stakeholder-country" or group_slug == "by-stakeholder-region" or group_slug == "by-stakeholder-name" %} active{% endif %}">
             <div class="thumbnail">
-                <a href="/get-the-detail/by-investor-name/">By investor</a><br/>
-                <a href="/get-the-detail/by-investor-country/">By investor country</a><br/>
-                <a href="/get-the-detail/by-investor-region/">By investor region</a>
+                <a href="/global/by-stakeholder-name/none/">By stakeholder</a><br/>
+                <a href="/global/by-stakeholder-country/none/">By stakeholder country</a><br/>
+                <a href="/global/by-stakeholder-region/none/">By stakeholder region</a>
             </div>
         </li>
 		<li class="by-data-source-type {% if group_slug == "by-data-source-type" %} active{% endif %}">
-            <div class="thumbnail"><a href="/get-the-detail/by-data-source-type/">By data source type</a></div>
+            <div class="thumbnail"><a href="/global/by-data-source-type/none/">By data source type</a></div>
         </li>
 		<li class="by-intention {% if group_slug == "by-intention" %} active{% endif %}">
-            <div class="thumbnail"><a href="/get-the-detail/by-intention/">By intention of investment</a></div>
+            <div class="thumbnail"><a href="/global/by-intention/none/">By intention of investment</a></div>
         </li>
 		<li class="by-crop {% if group_slug == "by-crop" %} active{% endif %}">
-            <div class="thumbnail"><a href="/get-the-detail/by-crop/">By crop</a></div>
+            <div class="thumbnail"><a href="/global/by-crop/none/">By crop</a></div>
         </li>
 		<li class="all last{% if group_slug == "all" %} active{% endif %}">
-            <div class="thumbnail"><a href="/get-the-detail/all/">All deals (ungrouped)</a></div>
+            <div class="thumbnail"><a href="/global/all/">All deals (ungrouped)</a></div>
         </li>
     </ul>
 </div>
