Legacy css and javascript marked as such

--- a/chart_view/templates/plugins/agricultural-produce.html
+++ b/chart_view/templates/plugins/agricultural-produce.html
@@ -148,10 +148,10 @@
 
 {% block after %}
 {{ block.super }}
-<script type="text/javascript" src="/media/js/vendor/RGraph.pie.js"></script>
-<script type="text/javascript" src="/media/js/vendor/RGraph.common.core.js"></script>
-<script type="text/javascript" src="/media/js/vendor/RGraph.common.effects.js"></script>
-<script type="text/javascript" src="/media/js/vendor/RGraph.common.dynamic.js"></script>
+<script type="text/javascript" src="/media/js/legacy/vendor/RGraph.pie.js"></script>
+<script type="text/javascript" src="/media/js/legacy/vendor/RGraph.common.core.js"></script>
+<script type="text/javascript" src="/media/js/legacy/vendor/RGraph.common.effects.js"></script>
+<script type="text/javascript" src="/media/js/legacy/vendor/RGraph.common.dynamic.js"></script>
 <script type="text/javascript">
 function draw(callback) {
     RGraph.ObjectRegistry.Clear();
