--- a/chart_view/templates/plugins/investor-target-countries.html
+++ b/chart_view/templates/plugins/investor-target-countries.html
@@ -39,10 +39,10 @@
 
 {% block after %}
 {{ block.super }}
-<script src="/media/js/vendor/raphael.min.js" type="text/javascript" charset="utf-8"></script>
-<script src="/media/js/vendor/raphael-svg-import.js" type="text/javascript" charset="utf-8"></script>
-<script src="/media/js/world.min.js" type="text/javascript" charset="utf-8"></script>
-<script src="/media/js/map.js" type="text/javascript" charset="utf-8"></script>
+<script src="/media/js/legacy/vendor/raphael.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="/media/js/legacy/vendor/raphael-svg-import.js" type="text/javascript" charset="utf-8"></script>
+<script src="/media/js/legacy/world.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="/media/js/legacy/map.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript">
 function get_base_filter() {
     var filters = "";
