--- a/chart_view/templates/plugins/transnational-deals.html
+++ b/chart_view/templates/plugins/transnational-deals.html
@@ -143,11 +143,11 @@ path.arc {
 </style>
 <!--[if lte IE 8]><script src="/media/js/vendor/r2d3.js" charset="utf-8"></script><![endif]-->
     <!--[if gte IE 9]><!-->
-    <script type="text/javascript" src="/media/js/vendor/d3.js"></script>
-    <script type="text/javascript" src="/media/js/vendor/d3.layout.js"></script>
+    <script type="text/javascript" src="/media/js/legacy/vendor/d3.js"></script>
+    <script type="text/javascript" src="/media/js/legacy/vendor/d3.layout.js"></script>
     <!--<![endif]-->
-<script type="text/javascript" src="/media/js/vendor/packages.js"></script>
-<script type="text/javascript" src="/media/js/transnational-deals.js"></script>
+<script type="text/javascript" src="/media/js/legacy/vendor/packages.js"></script>
+<script type="text/javascript" src="/media/js/legacy/transnational-deals.js"></script>
 <script type="text/javascript">
 $("button.close").click(function() {
     $(this).parents("div.well").hide();
