--- a/global_app/templates/global_base.html
+++ b/global_app/templates/global_base.html
@@ -2,8 +2,8 @@
 {% load i18n menu_tags %}
 
 {% block head %}
-<script src="/media/js/vendor/jquery.formset.custom.js" type="text/javascript" charset="utf-8"></script>
-<script src="/media/js/vendor/jquery.stickytableheaders.js" type="text/javascript" charset="utf-8"></script>
+<script src="/media/js/legacy/vendor/jquery.formset.custom.js" type="text/javascript" charset="utf-8"></script>
+<script src="/media/js/legacy/vendor/jquery.stickytableheaders.js" type="text/javascript" charset="utf-8"></script>
 <script src="/media/legacy/js/script.js" type="text/javascript" charset="utf-8"></script>
 {% endblock %}
 {% block body_class %}get-the-detail{% endblock %}
