--- a/templates/base-gettheidea.html
+++ b/templates/base-gettheidea.html
@@ -3,12 +3,12 @@
         {% block head %}
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <script type="text/javascript" src="/media/js/vendor/RGraph.pie.js"></script>
-        <script type="text/javascript" src="/media/js/vendor/RGraph.bar.js"></script>
-        <script type="text/javascript" src="/media/js/vendor/RGraph.common.core.js"></script>
-        <script type="text/javascript" src="/media/js/vendor/RGraph.common.effects.js"></script>
-        <script type="text/javascript" src="/media/js/vendor/RGraph.common.dynamic.js"></script>
-        <script type="text/javascript" src="/media/js/vendor/RGraph.common.tooltips.js"></script>
+        <script type="text/javascript" src="/media/js/legacy/vendor/RGraph.pie.js"></script>
+        <script type="text/javascript" src="/media/js/legacy/vendor/RGraph.bar.js"></script>
+        <script type="text/javascript" src="/media/js/legacy/vendor/RGraph.common.core.js"></script>
+        <script type="text/javascript" src="/media/js/legacy/vendor/RGraph.common.effects.js"></script>
+        <script type="text/javascript" src="/media/js/legacy/vendor/RGraph.common.dynamic.js"></script>
+        <script type="text/javascript" src="/media/js/legacy/vendor/RGraph.common.tooltips.js"></script>
         <script type="text/javascript">
 var storage = {};
 function draw (callback, chart_data) {
