--- a/chart_view/templates/plugins/overview.html
+++ b/chart_view/templates/plugins/overview.html
@@ -41,12 +41,12 @@
 
 {% block after %}
 {{ block.super }}
-<script type="text/javascript" src="/media/js/vendor/RGraph.pie.js"></script>
-<script type="text/javascript" src="/media/js/vendor/RGraph.bar.js"></script>
-<script type="text/javascript" src="/media/js/vendor/RGraph.common.core.js"></script>
-<script type="text/javascript" src="/media/js/vendor/RGraph.common.effects.js"></script>
-<script type="text/javascript" src="/media/js/vendor/RGraph.common.dynamic.js"></script>
-<script type="text/javascript" src="/media/js/vendor/RGraph.common.tooltips.js"></script>
+<script type="text/javascript" src="/media/js/legacy/vendor/RGraph.pie.js"></script>
+<script type="text/javascript" src="/media/js/legacy/vendor/RGraph.bar.js"></script>
+<script type="text/javascript" src="/media/js/legacy/vendor/RGraph.common.core.js"></script>
+<script type="text/javascript" src="/media/js/legacy/vendor/RGraph.common.effects.js"></script>
+<script type="text/javascript" src="/media/js/legacy/vendor/RGraph.common.dynamic.js"></script>
+<script type="text/javascript" src="/media/js/legacy/vendor/RGraph.common.tooltips.js"></script>
 <script type="text/javascript">
 $(document).ready(function () {
 //    alert('ready!');
