--- a/global_app/templates/add-deal.html
+++ b/global_app/templates/add-deal.html
@@ -5,6 +5,9 @@
 {% block head %}
 
   {# bootstrap #}
+    <!-- TODO: Clear up library usage here. Why is this file including them itself? Should've been done
+    on top. in base.html already. -->
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
