--- a/templates/start.html
+++ b/templates/start.html
@@ -60,8 +60,8 @@
 
 {% block footer_scripts %}
 {{ block.super }}
-<script type="text/javascript" src="/media/js/vendor/jquery.fancybox.js?v=2.1.4"></script>
-<link rel="stylesheet" type="text/css" href="/media/css/jquery.fancybox.css?v=2.1.4" media="screen" />
+<script type="text/javascript" src="/media/js/legacy/vendor/jquery.fancybox.js?v=2.1.4"></script>
+<link rel="stylesheet" type="text/css" href="/media/css/legacy/jquery.fancybox.css?v=2.1.4" media="screen" />
 <script type="text/javascript">
 $(document).ready(function () {
     $(".fancybox").fancybox({
